Add support for rendering linear background gradients and supply rudimentary description of config file in README

--- a/SwiftFrame.xcodeproj/xcshareddata/xcschemes/SwiftFrame.xcscheme
+++ b/SwiftFrame.xcodeproj/xcshareddata/xcschemes/SwiftFrame.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A8731D2D1F387B540033ADD1"
+               BuildableName = "SwiftFrameTests.xctest"
+               BlueprintName = "SwiftFrameTests"
+               ReferencedContainer = "container:SwiftFrame.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
