--- a/Example/swiftframe.config
+++ b/Example/swiftframe.config
@@ -1,5 +1,5 @@
 {
-    "backgroundColor": "#5787E4",
+    "background": "linear-gradient(to bottom, #5787E4, #274C96)",
     "titles": {
         "color": "#FFFFFF",
         "font": "/System/Library/Fonts/HelveticaNeue.dfont", 
@@ -8,27 +8,27 @@
     "frames": {
         "iPhone5s\\.png": {
             "path": "Frames/iPhone-4-inch.png",
-            "viewport": "60 180 700 1316",
+            "viewport": "63 183 703 1319",
             "padding": 30
         },
         "iPhone6s\\.png": {
             "path": "Frames/iPhone-5-inch.png",
-            "viewport": "60 180 810 1514",
+            "viewport": "63 183 813 1517",
             "padding": 30
         },
         "iPhone6sPlus\\.png": {
             "path": "Frames/iPhone-5.5-inch.png",
-            "viewport": "60 180 1302 2388",
+            "viewport": "63 183 1305 2391",
             "padding": 30
         },
         "iPadAir2\\.png": {
             "path": "Frames/iPad-9.7-inch.png",
-            "viewport": "60 180 1596 2228",
+            "viewport": "63 183 1599 2231",
             "padding": 30
         },
         "iPadPro\\(12.9inch\\)\\.png": {
             "path": "Frames/iPad-12.9-inch.png",
-            "viewport": "60 180 2108 2912",
+            "viewport": "63 183 2111 2915",
             "padding": 30
         }
     },
