Fix coordinate system bug in viewport computation
The viewport was falsely returned in an upper-left-origin system instead
of Core Graphic's lower-left-origin system. This resulted in misplaced
screenshots for asymmetric frames.

--- a/Example/swiftframe.config
+++ b/Example/swiftframe.config
@@ -2,7 +2,7 @@
     "background": "linear-gradient(to bottom, #5787E4, #274C96)",
     "titles": {
         "color": "#FFFFFF",
-        "font": "/System/Library/Fonts/HelveticaNeue.dfont", 
+        "font": "/System//Library/Fonts/HelveticaNeue.ttc", 
         "padding": "65 60 70 60"
     },
     "frames": {
@@ -20,6 +20,10 @@
         },
         "iPhone8\\.png": {
             "path": "Frames/iPhone8.png",
+            "padding": 30
+        },
+        "iPhone8Plus\\.png": {
+            "path": "Frames/iPhone8Plus.png",
             "padding": 30
         },
         "iPadAir2\\.png": {
