Add support for iPhoneX framing
This adds a new frame parameter `hasNotch` that enables special processing for
iPhoneX-like frames. Note that the viewport masking is currently imperfect which
is especially apparent around rounded corners.

--- a/Example/swiftframe.config
+++ b/Example/swiftframe.config
@@ -33,6 +33,11 @@
         "iPadPro\\(12.9inch\\)\\.png": {
             "path": "Frames/iPadPro-12.9-inch.png",
             "padding": 30
+        },
+        "iPhoneX\\.png": {
+            "path": "Frames/iPhoneX.png",
+            "padding": 30,
+            "hasNotch": true
         }
     },
     "allowDownsampling": true,
