--- a/Example/proposal.config
+++ b/Example/proposal.config
@@ -1,10 +1,12 @@
 {
+    // text file names will be matched with folder names of screenshots
     "titlesPath": "/some/path/with/textfiles",
     "maxFontSize": 50,
     "outputPath": "eg/fastlane/screenshots",
     "fontFile": "path/to/fontfile",
     "textColor": "#FFF",
     "devices": {
+        // Name will be used as suffix for rendered screenshots
         "iPhone 5.8 inch": {
             "screenshots": "folder/path/with/subfolders",
             "pathToTemplateFile": "path/to/template/file.png",
@@ -25,51 +27,24 @@
                     "x": 200,
                     "y": 390.37
                 }
-            }
-        },
-        "iPhone 4 inch": {
-            "screenshots": "folder/path/with/subfolders",
-            "pathToTemplateFile": "path/to/template/file.png",
-            "screenshotCoordinates": {
-                "bottomLeft": {
-                    "x": 100,
-                    "y": 343.21
-                },
-                "bottomRight": {
-                    "x": 100,
-                    "y": 343.21
-                },
-                "topLeft": {
-                    "x": 100,
-                    "y": 600.123
-                },
-                "topRight": {
-                    "x": 200,
-                    "y": 390.37
+            },
+            // no need for identifiers as we can just match line
+            // to array index
+            "textBounds": [
+                {
+                    "bottomLeft": {
+                        "x": 200,
+                        "y": 300
+                    },
+                    "topRight": {
+                        "x": 200,
+                        "y": 300
+                    },
+                    // Optional key maybe for areas where the template file
+                    // might have similar color as text color
+                    "textColorOverride": "#FFF"
                 }
-            }
-        },
-        "iPad 11 inch": {
-            "screenshots": "folder/path/with/subfolders",
-            "pathToTemplateFile": "path/to/template/file.png",
-            "screenshotCoordinates": {
-                "bottomLeft": {
-                    "x": 100,
-                    "y": 343.21
-                },
-                "bottomRight": {
-                    "x": 100,
-                    "y": 343.21
-                },
-                "topLeft": {
-                    "x": 100,
-                    "y": 600.123
-                },
-                "topRight": {
-                    "x": 200,
-                    "y": 390.37
-                }
-            }
+            ]
         }
     }
 }
