further getting rid of old code, updated proposal file

--- a/Example/proposal.config
+++ b/Example/proposal.config
@@ -2,36 +2,45 @@
     // text file names will be matched with folder names of screenshots
     "titlesPath": "/some/path/with/textfiles",
     "maxFontSize": 50,
-    "outputPath": "eg/fastlane/screenshots",
+    "outputPaths": [
+        "eg/fastlane/screenshots"
+    ],
     "fontFile": "path/to/fontfile",
     "textColor": "#FFF",
-    "devices": {
-        // Name will be used as suffix for rendered screenshots
-        "iPhone 5.8 inch": {
+    "devices": [
+        {
+            // Name will be used as suffix for rendered screenshots
+            "outputSuffix": "iPhone X 5.8 inches",
             "screenshots": "folder/path/with/subfolders",
             "pathToTemplateFile": "path/to/template/file.png",
-            "screenshotCoordinates": {
-                "bottomLeft": {
-                    "x": 100,
-                    "y": 343.21
-                },
-                "bottomRight": {
-                    "x": 100,
-                    "y": 343.21
-                },
-                "topLeft": {
-                    "x": 100,
-                    "y": 600.123
-                },
-                "topRight": {
-                    "x": 200,
-                    "y": 390.37
+            "screenshotCoordinates": [
+                {
+                    // will be used to look in the screenshots directory for a file with this name
+                    "screenshotname": "hotel_results.png",
+                    "bottomLeft": {
+                        "x": 100,
+                        "y": 343.21
+                    },
+                    "bottomRight": {
+                        "x": 100,
+                        "y": 343.21
+                    },
+                    "topLeft": {
+                        "x": 100,
+                        "y": 600.123
+                    },
+                    "topRight": {
+                        "x": 200,
+                        "y": 390.37
+                    },
+                    // If only bottom coordinates are given, supply an additional rotation angle
+                    "rotationAngle": 30.00
                 }
-            },
-            // no need for identifiers as we can just match line
-            // to array index
+            ],
             "textBounds": [
                 {
+                    // titleIdentifier will be used to look for the line in the text files
+                    "titleIdentifier": "hotel_results",
                     "bottomLeft": {
                         "x": 200,
                         "y": 300
@@ -40,11 +49,12 @@
                         "x": 200,
                         "y": 300
                     },
-                    // Optional key maybe for areas where the template file
-                    // might have similar color as text color
-                    "textColorOverride": "#FFF"
+                    // Optional keys
+                    "textColorOverride": "#FFF",
+                    "maxFontSizeOverride": 20,
+                    "customFontPath": "path/to/custom/font"
                 }
             ]
         }
-    }
+    ]
 }
