--- a/Example/proposal.config
+++ b/Example/proposal.config
@@ -1,45 +1,40 @@
 {
-    // text file names will be matched with folder names of screenshots
     "titlesPath": "/some/path/with/textfiles",
     "maxFontSize": 50,
     "outputPaths": [
         "eg/fastlane/screenshots"
     ],
-    "fontFile": "path/to/fontfile",
+    "fontFile": "/Users/hpanhans/Library/Fonts/3270Medium.ttf",
     "textColor": "#FFF",
-    "devices": [
+    "deviceData": [
         {
-            // Name will be used as suffix for rendered screenshots
             "outputSuffix": "iPhone X 5.8 inches",
             "screenshots": "folder/path/with/subfolders",
-            "pathToTemplateFile": "path/to/template/file.png",
-            "screenshotCoordinates": [
+            "templateFile": "path/to/template/file.png",
+            "screenshotData": [
                 {
-                    // will be used to look in the screenshots directory for a file with this name
-                    "screenshotname": "hotel_results.png",
+                    "screenshotName": "hotel_results.png",
                     "bottomLeft": {
                         "x": 100,
-                        "y": 343.21
+                        "y": 343
                     },
                     "bottomRight": {
                         "x": 100,
-                        "y": 343.21
+                        "y": 343
                     },
                     "topLeft": {
                         "x": 100,
-                        "y": 600.123
+                        "y": 600
                     },
                     "topRight": {
                         "x": 200,
-                        "y": 390.37
+                        "y": 390
                     },
-                    // If only bottom coordinates are given, supply an additional rotation angle
                     "rotationAngle": 30.00
                 }
             ],
-            "textBounds": [
+            "textData": [
                 {
-                    // titleIdentifier will be used to look for the line in the text files
                     "titleIdentifier": "hotel_results",
                     "bottomLeft": {
                         "x": 200,
@@ -49,10 +44,9 @@
                         "x": 200,
                         "y": 300
                     },
-                    // Optional keys
                     "textColorOverride": "#FFF",
                     "maxFontSizeOverride": 20,
-                    "customFontPath": "path/to/custom/font"
+                    "customFontPath": "/Users/hpanhans/Library/Fonts/Hack-Italic.ttf"
                 }
             ]
         }
