got font file parsing to work, collecting screenshots

--- a/Example/proposal.config
+++ b/Example/proposal.config
@@ -4,12 +4,12 @@
     "outputPaths": [
         "eg/fastlane/screenshots"
     ],
-    "fontFile": "/Users/hpanhans/Library/Fonts/3270Medium.ttf",
+    "fontFile": "/Users/hpanhans/Library/Fonts/Meslo LG L Regular for Powerline.ttf",
     "textColor": "#FFF",
     "deviceData": [
         {
             "outputSuffix": "iPhone X 5.8 inches",
-            "screenshots": "folder/path/with/subfolders",
+            "screenshots": "/Users/hpanhans/Downloads/iTunesConnect/com.kayak.travel/screenshots",
             "templateFile": "path/to/template/file.png",
             "screenshotData": [
                 {
