--- a/Example/proposal.config
+++ b/Example/proposal.config
@@ -1,40 +1,45 @@
 {
-    "titlesPath": "/Users/hpanhans/Desktop/DebugStringFiles/",
+    // text file names will be matched with folder names of screenshots
+    "titlesPath": "/some/path/with/textfiles",
     "maxFontSize": 50,
     "outputPaths": [
         "eg/fastlane/screenshots"
     ],
-    "fontFile": "/Users/hpanhans/Library/Fonts/Meslo LG L Regular for Powerline.ttf",
+    "fontFile": "path/to/fontfile",
     "textColor": "#FFF",
-    "deviceData": [
+    "devices": [
         {
+            // Name will be used as suffix for rendered screenshots
             "outputSuffix": "iPhone X 5.8 inches",
-            "screenshots": "/Users/hpanhans/Downloads/iTunesConnect/com.kayak.travel/screenshots",
-            "templateFile": "path/to/template/file.png",
-            "screenshotData": [
+            "screenshots": "folder/path/with/subfolders",
+            "pathToTemplateFile": "path/to/template/file.png",
+            "screenshotCoordinates": [
                 {
-                    "screenshotName": "hotel_results.png",
+                    // will be used to look in the screenshots directory for a file with this name
+                    "screenshotname": "hotel_results.png",
                     "bottomLeft": {
                         "x": 100,
-                        "y": 343
+                        "y": 343.21
                     },
                     "bottomRight": {
                         "x": 100,
-                        "y": 343
+                        "y": 343.21
                     },
                     "topLeft": {
                         "x": 100,
-                        "y": 600
+                        "y": 600.123
                     },
                     "topRight": {
                         "x": 200,
-                        "y": 390
+                        "y": 390.37
                     },
+                    // If only bottom coordinates are given, supply an additional rotation angle
                     "rotationAngle": 30.00
                 }
             ],
-            "textData": [
+            "textBounds": [
                 {
+                    // titleIdentifier will be used to look for the line in the text files
                     "titleIdentifier": "hotel_results",
                     "bottomLeft": {
                         "x": 200,
@@ -44,9 +49,10 @@
                         "x": 200,
                         "y": 300
                     },
+                    // Optional keys
                     "textColorOverride": "#FFF",
                     "maxFontSizeOverride": 20,
-                    "customFontPath": "/Users/hpanhans/Library/Fonts/Hack-Italic.ttf"
+                    "customFontPath": "path/to/custom/font"
                 }
             ]
         }
