Improved API of ImageWriter

--- a/Example/example.config
+++ b/Example/example.config
@@ -1,8 +1,8 @@
 {
-  "titlesPath": "/Users/hpanhans/Desktop/DebugStringFiles/",
+  "titlesPath": "Example/Strings",
   "maxFontSize": 110,
   "outputPaths": [
-    "/Users/hpanhans/Desktop/DebugStringFiles/"
+    "Example/Output/"
   ],
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
@@ -11,62 +11,75 @@
     {
       "outputSuffix": "iPhone X 5.8 inches",
       "coordinatesOriginIsTopLeft": true,
-      "screenshots": "/Users/hpanhans/Downloads/iTunesConnect/com.kayak.travel/screenshots/",
-      "templateFile": "/Users/hpanhans/Downloads/DebugTemplateFile.png",
+      "screenshots": "Example/Screenshots/iPhone X/",
+      "templateFile": "Example/Template Files/iPhone X/TemplateFile.png",
       "screenshotData": [
         {
-          "screenshotName": "IMG_2192.PNG",
+          "screenshotName": "launchscreen.png",
           "zIndex": 12,
           "bottomLeft": {
-            "x": 220,
-            "y": 2058
+            "x": 133,
+            "y": 2028
           },
           "bottomRight": {
-            "x": 1081,
-            "y": 2058
+            "x": 994,
+            "y": 2028
           },
           "topLeft": {
-            "x": 220,
-            "y": 194
+            "x": 133,
+            "y": 164
           },
           "topRight": {
-            "x": 1081,
-            "y": 194
+            "x": 994,
+            "y": 164
           }
         },
         {
-          "screenshotName": "Settings.jpeg",
+          "screenshotName": "frontdoor.png",
           "zIndex": 5,
           "bottomLeft": {
-            "x": 3720,
-            "y": 559
+            "x": 1241,
+            "y": 1452
           },
           "bottomRight": {
-            "x": 4249,
-            "y": 559
+            "x": 1852,
+            "y": 2059
           },
           "topLeft": {
-            "x": 2460,
-            "y": 1506
+            "x": 2561,
+            "y": 132
           },
           "topRight": {
-            "x": 3957,
-            "y": 2315
+            "x": 3171,
+            "y": 742
           }
         }
       ],
       "textData": [
         {
-          "titleIdentifier": "debug-title1",
+          "titleIdentifier": "welcome-title",
           "topLeft": {
-            "x": 1400,
-            "y": 100
+            "x": 66,
+            "y": 2137
           },
           "bottomRight": {
-            "x": 1800,
-            "y": 400
+            "x": 1059,
+            "y": 2377
           },
-          "textColorOverride": "#000",
+          "textColorOverride": "#FFF",
+          "textAlignment": "center"
+        },
+        {
+          "titleIdentifier": "button-callout",
+          "topLeft": {
+            "x": 2349,
+            "y": 1811
+          },
+          "bottomRight": {
+            "x": 3258,
+            "y": 2171
+          },
+          "textColorOverride": "#FFF",
           "textAlignment": "right"
         }
       ]
