trying to fix seg fault

--- a/Example/example.config
+++ b/Example/example.config
@@ -83,6 +83,82 @@
           "textAlignment": "right"
         }
       ]
+    },
+    {
+      "outputSuffix": "iPad Pro 12.9 inch",
+      "coordinatesOriginIsTopLeft": true,
+      "screenshots": "Example/Screenshots/iPad Pro/",
+      "templateFile": "Example/Template Files/iPad Pro/TemplateFile.png",
+      "screenshotData": [
+        {
+          "screenshotName": "launchscreen.png",
+          "zIndex": 12,
+          "bottomLeft": {
+            "x": 234,
+            "y": 2266
+          },
+          "bottomRight": {
+            "x": 1812,
+            "y": 2266
+          },
+          "topLeft": {
+            "x": 234,
+            "y": 162
+          },
+          "topRight": {
+            "x": 1812,
+            "y": 162
+          }
+        },
+        {
+          "screenshotName": "frontdoor.png",
+          "zIndex": 5,
+          "bottomLeft": {
+            "x": 2290,
+            "y": 1008
+          },
+          "bottomRight": {
+            "x": 3511,
+            "y": 2228
+          },
+          "topLeft": {
+            "x": 3919,
+            "y": -621
+          },
+          "topRight": {
+            "x": 5139,
+            "y": 600
+          }
+        }
+      ],
+      "textData": [
+        {
+          "titleIdentifier": "welcome-title",
+          "topLeft": {
+            "x": 66,
+            "y": 2137
+          },
+          "bottomRight": {
+            "x": 1059,
+            "y": 2377
+          },
+          "textColorOverride": "#FFF",
+          "textAlignment": "center"
+        },
+        {
+          "titleIdentifier": "button-callout",
+          "topLeft": {
+            "x": 2349,
+            "y": 1811
+          },
+          "bottomRight": {
+            "x": 3258,
+            "y": 2171
+          },
+          "textColorOverride": "#FFF",
+          "textAlignment": "right"
+        }
+      ]
     }
   ]
 }
