Added support for ttc files, defaulting to regular weight

--- a/Example/example.config
+++ b/Example/example.config
@@ -1,6 +1,6 @@
 {
   "titlesPath": "Example/Strings",
-  "maxFontSize": 110,
+  "maxFontSize": 140,
   "outputPaths": [
     "Example/Output/"
   ],
@@ -142,8 +142,8 @@
             "x": 1882,
             "y": 2525
           },
-          "textColorOverride": "#FFF",
-          "textAlignment": "center"
+          "textAlignment": "center",
+          "customFontPath": "/System/Library/Fonts/Avenir Next.ttc"
         },
         {
           "titleIdentifier": "button-callout",
@@ -155,7 +155,7 @@
             "x": 3154,
             "y": 2368
           },
-          "textColorOverride": "#FFF",
+          "textColorOverride": "#ff7518",
           "textAlignment": "right"
         }
       ]
