--- a/Example/example.config
+++ b/Example/example.config
@@ -6,7 +6,7 @@
   ],
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
-  "alsoOutputWholeImage": true,
+  "outputWholeImage": true,
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
