Implemented changes suggested from PR

--- a/Example/example.config
+++ b/Example/example.config
@@ -1,5 +1,5 @@
 {
-  "titlesPath": "Example/Strings",
+  "stringsPath": "Example/Strings",
   "maxFontSize": 140,
   "outputPaths": [
     "Example/Output/"
@@ -10,7 +10,6 @@
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
-      "coordinateOriginIsTopLeft": true,
       "screenshots": "Example/Screenshots/iPhone X/",
       "templateFile": "Example/Template Files/iPhone X/TemplateFile.png",
       "screenshotData": [
@@ -57,7 +56,7 @@
       ],
       "textData": [
         {
-          "titleIdentifier": "welcome-title",
+          "identifier": "welcome-title",
           "topLeft": {
             "x": 66,
             "y": 2137
@@ -66,11 +65,10 @@
             "x": 1059,
             "y": 2377
           },
-          "textColorOverride": "#FFF",
-          "textAlignment": "center"
+          "alignment": "center"
         },
         {
-          "titleIdentifier": "button-callout",
+          "identifier": "button-callout",
           "topLeft": {
             "x": 2349,
             "y": 1811
@@ -79,14 +77,13 @@
             "x": 3258,
             "y": 2171
           },
-          "textColorOverride": "#FFF",
-          "textAlignment": "right"
+          "colorOverride": "#ff7518",
+          "alignment": "right"
         }
       ]
     },
     {
       "outputSuffix": "iPad Pro 12.9 inch",
-      "coordinateOriginIsTopLeft": true,
       "screenshots": "Example/Screenshots/iPad Pro/",
       "templateFile": "Example/Template Files/iPad Pro/TemplateFile.png",
       "screenshotData": [
@@ -133,7 +130,7 @@
       ],
       "textData": [
         {
-          "titleIdentifier": "welcome-title",
+          "identifier": "welcome-title",
           "topLeft": {
             "x": 166,
             "y": 2405
@@ -142,11 +139,11 @@
             "x": 1882,
             "y": 2525
           },
-          "textAlignment": "center",
+          "alignment": "center",
           "customFontPath": "/System/Library/Fonts/Avenir Next.ttc"
         },
         {
-          "titleIdentifier": "button-callout",
+          "identifier": "button-callout",
           "topLeft": {
             "x": 2185,
             "y": 2068
@@ -155,8 +152,8 @@
             "x": 3154,
             "y": 2368
           },
-          "textColorOverride": "#ff7518",
-          "textAlignment": "right"
+          "colorOverride": "#ff7518",
+          "alignment": "right"
         }
       ]
     }
