Some big performance improvements

--- a/Example/example.config
+++ b/Example/example.config
@@ -6,12 +6,12 @@
   ],
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
-  "outputWholeImage": true,
+  "outputWholeImage": false,
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
       "screenshots": "Example/Screenshots/iPhone X/",
-      "templateFile": "Example/Template Files/iPhone X/TemplateFile.png",
+      "templateFile": "Example/Template Files/iPhone X TemplateFile.png",
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
@@ -85,7 +85,7 @@
     {
       "outputSuffix": "iPad Pro 12.9 inch",
       "screenshots": "Example/Screenshots/iPad Pro/",
-      "templateFile": "Example/Template Files/iPad Pro/TemplateFile.png",
+      "templateFile": "Example/Template Files/iPad Pro TemplateFile.png",
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
