Doing some stuff to not end programm before all images finished writin
it's getting a little ugly though

--- a/Example/example.config
+++ b/Example/example.config
@@ -6,7 +6,7 @@
   ],
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
-  "outputWholeImage": false,
+  "outputWholeImage": true,
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
