Fixed deadlock and added output format

--- a/Example/example.config
+++ b/Example/example.config
@@ -1,8 +1,9 @@
 {
-  "stringsPath": "Example/Strings",
+  "format": "jpg",
+  "stringsPath": "/Users/hpanhans/SwiftFrame/Example/Strings",
   "maxFontSize": 140,
   "outputPaths": [
-    "Example/Output/"
+    "/Users/hpanhans/SwiftFrame/Example/Output/"
   ],
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
@@ -10,8 +11,8 @@
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
-      "screenshots": "Example/Screenshots/iPhone X/",
-      "templateFile": "Example/Template Files/iPhone X TemplateFile.png",
+      "screenshots": "/Users/hpanhans/SwiftFrame/Example/Screenshots/iPhone X/",
+      "templateFile": "/Users/hpanhans/SwiftFrame/Example/Template Files/iPhone X TemplateFile.png",
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
@@ -84,8 +85,8 @@
     },
     {
       "outputSuffix": "iPad Pro 12.9 inch",
-      "screenshots": "Example/Screenshots/iPad Pro/",
-      "templateFile": "Example/Template Files/iPad Pro TemplateFile.png",
+      "screenshots": "/Users/hpanhans/SwiftFrame/Example/Screenshots/iPad Pro/",
+      "templateFile": "/Users/hpanhans/SwiftFrame/Example/Template Files/iPad Pro TemplateFile.png",
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
