Implementing changes suggested in PR
Also fixed file writing bug

--- a/Example/example.config
+++ b/Example/example.config
@@ -1,6 +1,6 @@
 {
   "format": "png",
-  "stringsPath": "Example/Strings",
+  "stringsPath": "Example/Strings/",
   "maxFontSize": 140,
   "outputPaths": [
     "Example/Output/"
