some clean up and actually filtering for screenshots

--- a/Example/example.config
+++ b/Example/example.config
@@ -9,6 +9,9 @@
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
   "outputWholeImage": true,
+  "skippedLocales": [
+    "en"
+  ],
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
