Updated to use correct key

--- a/Example/example.config
+++ b/Example/example.config
@@ -9,9 +9,7 @@
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
   "outputWholeImage": true,
-  "skippedLocales": [
-    "en"
-  ],
+  "locales": "de",
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
