Support skipping locales (#15)
Other changes include the addition of some sensible defaults for some JSON keys in case they are missing

--- a/Example/example.config
+++ b/Example/example.config
@@ -9,6 +9,7 @@
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
   "outputWholeImage": true,
+  "locales": "de",
   "deviceData": [
     {
       "outputSuffix": "iPhone X 5.8 inches",
@@ -37,7 +38,6 @@
         },
         {
           "screenshotName": "frontdoor.png",
-          "zIndex": 5,
           "bottomLeft": {
             "x": 1241,
             "y": 1452
@@ -91,7 +91,6 @@
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
-          "zIndex": 12,
           "bottomLeft": {
             "x": 234,
             "y": 2266
