--- a/Example/example.config
+++ b/Example/example.config
@@ -59,6 +59,7 @@
       "textData": [
         {
           "identifier": "welcome-title",
+          "groupIdentifier": "iPhoneX",
           "topLeft": {
             "x": 66,
             "y": 2137
@@ -67,10 +68,14 @@
             "x": 1059,
             "y": 2377
           },
-          "alignment": "center"
+          "alignment": {
+            "horizontal": "center",
+            "vertical": "top"
+          }
         },
         {
           "identifier": "button-callout",
+          "groupIdentifier": "iPhoneX",
           "topLeft": {
             "x": 2349,
             "y": 1811
@@ -80,7 +85,10 @@
             "y": 2171
           },
           "colorOverride": "#ff7518",
-          "alignment": "right"
+          "alignment": {
+            "horizontal": "right",
+            "vertical": "center"
+          }
         }
       ]
     },
@@ -140,7 +148,10 @@
             "x": 1882,
             "y": 2525
           },
-          "alignment": "center",
+          "alignment": {
+            "horizontal": "center",
+            "vertical": "center"
+          },
           "customFontPath": "/System/Library/Fonts/Avenir Next.ttc"
         },
         {
@@ -154,7 +165,10 @@
             "y": 2368
           },
           "colorOverride": "#ff7518",
-          "alignment": "right"
+          "alignment": {
+            "horizontal": "right",
+            "vertical": "bottom"
+          },
         }
       ]
     }
