Support vertical text alignment (#17)
Changes will be detailed in the release notes

--- a/Example/example.config
+++ b/Example/example.config
@@ -67,7 +67,10 @@
             "x": 1059,
             "y": 2377
           },
-          "alignment": "center"
+          "alignment": {
+            "horizontal": "center",
+            "vertical": "top"
+          }
         },
         {
           "identifier": "button-callout",
@@ -80,7 +83,10 @@
             "y": 2171
           },
           "colorOverride": "#ff7518",
-          "alignment": "right"
+          "alignment": {
+            "horizontal": "right",
+            "vertical": "center"
+          }
         }
       ]
     },
@@ -140,7 +146,10 @@
             "x": 1882,
             "y": 2525
           },
-          "alignment": "center",
+          "alignment": {
+            "horizontal": "center",
+            "vertical": "center"
+          },
           "customFontPath": "/System/Library/Fonts/Avenir Next.ttc"
         },
         {
@@ -154,7 +163,10 @@
             "y": 2368
           },
           "colorOverride": "#ff7518",
-          "alignment": "right"
+          "alignment": {
+            "horizontal": "right",
+            "vertical": "bottom"
+          },
         }
       ]
     }
