--- a/Example/example.config
+++ b/Example/example.config
@@ -91,7 +91,8 @@
       ]
     },
     {
-      "outputSuffix": "iPad Pro 12.9 inch",
+      "outputSuffix": "ipadPro",
+      "additionalSuffixes": ["ipadPro129"],
       "screenshots": "Example/Screenshots/iPad Pro/",
       "templateFile": "Example/Template Files/iPad Pro TemplateFile.png",
       "screenshotData": [
