--- a/Example/example.config
+++ b/Example/example.config
@@ -9,10 +9,9 @@
   "fontFile": "/System/Library/Fonts/HelveticaNeue.ttc",
   "textColor": "#FFF",
   "outputWholeImage": true,
-  "locales": "de",
   "deviceData": [
     {
-      "outputSuffix": "iPhone X 5.8 inches",
+      "outputSuffixes": ["iPhone X 5.8 inches"],
       "screenshots": "Example/Screenshots/iPhone X/",
       "templateFile": "Example/Template Files/iPhone X TemplateFile.png",
       "screenshotData": [
@@ -91,8 +90,7 @@
       ]
     },
     {
-      "outputSuffix": "ipadPro",
-      "additionalSuffixes": ["ipadPro129"],
+      "outputSuffixes": ["ipadPro", "ipadPro129"],
       "screenshots": "Example/Screenshots/iPad Pro/",
       "templateFile": "Example/Template Files/iPad Pro TemplateFile.png",
       "screenshotData": [
