Some fixes, not perfect yet

--- a/Example/example.config
+++ b/Example/example.config
@@ -81,7 +81,7 @@
             "x": 3258,
             "y": 2171
           },
-          "colorOverride": "#ff7518",
+          "colorOverride": "rgb(1.0, 0, 0)",
           "alignment": {
             "horizontal": "right",
             "vertical": "center"
