Update example config files
Signed-off-by: Henrik Panhans <hpanhans@kayak.com>

--- a/Example/example.config
+++ b/Example/example.config
@@ -12,6 +12,7 @@
       "outputSuffixes": ["iPhone X 5.8 inches"],
       "screenshots": "Example/Screenshots/iPhone X/",
       "templateFile": "Example/Template Files/iPhone X TemplateFile.png",
+      "numberOfSlices": 5,
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
@@ -91,6 +92,7 @@
       "outputSuffixes": ["ipadPro", "ipadPro129"],
       "screenshots": "Example/Screenshots/iPad Pro/",
       "templateFile": "Example/Template Files/iPad Pro TemplateFile.png",
+      "numberOfSlices": 4,
       "screenshotData": [
         {
           "screenshotName": "launchscreen.png",
