--- a/Example/example.yaml
+++ b/Example/example.yaml
@@ -11,6 +11,7 @@ deviceData:
         - iPhone X 5.8 inches
     screenshots: Example/Screenshots/iPhone X/
     templateFile: Example/Template Files/iPhone X TemplateFile.png
+    numberOfSlices: 4
     screenshotData:
       - screenshotName: launchscreen.png
         zIndex: 12
@@ -66,6 +67,7 @@ deviceData:
       - iPad Pro 12.9 inch
     screenshots: Example/Screenshots/iPad Pro/
     templateFile: Example/Template Files/iPad Pro TemplateFile.png
+    numberOfSlices: 5
     screenshotData:
       - screenshotName: launchscreen.png
         zIndex: 12
