--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -7,8 +7,13 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -v
-    - name: Run tests
-      run: swift test -v
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Configure Swift version
+        uses: swift-actions/setup-swift@v1
+        with:
+          swift-version: "5.8"
+      - name: Build
+        run: swift build -v
+      - name: Run tests
+        run: swift test -v
