--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Configure Swift version
-        uses: swift-actions/setup-swift@v1
+      - name: Configure Xcode version
+        uses: maxim-lobanov/setup-xcode@v1
         with:
-          swift-version: "5.9"
+          xcode-version: latest-stable
       - name: Build
         run: swift build -v
       - name: Run tests
