--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -4,15 +4,15 @@ on: [push]
 
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-14
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Configure Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: "15.2"
       - name: Build
         run: swift build -v
       - name: Run tests
